[10.9] [PR 145] Set a source language when there is no set
Backport of PR #145

--- a/modules/admin_manual/pages/appliance/configuration/clamav.adoc
+++ b/modules/admin_manual/pages/appliance/configuration/clamav.adoc
@@ -43,6 +43,7 @@ The installation should only take a few minutes.
 
 Start the ClamAV service:
 
+[source,bash]
 ----
 systemctl enable clamav-daemon.service
 systemctl start clamav-daemon.service
@@ -60,15 +61,16 @@ If you try to update the ClamAV virus database manually, by entering
 https://linux.die.net/man/1/freshclam[freshclam] is already updating the database.
 ""
 
+[source,plaintext]
 ----
 ERROR: /var/log/clamav/freshclam.log is locked by another process
 ERROR: Problem with internal logger (UpdateLogFile = /var/log/clamav/freshclam.log).
 ----
 
-
 Updates are run based on the configured time interval in the applicable
 Cron job. In the example below, the update would run every 47 minutes:
 
+[source,plaintext]
 ----
 # m   h  dom mon dow  command
 47  *  *   *    *  /usr/bin/freshclam --quiet
@@ -77,19 +79,22 @@ Cron job. In the example below, the update would run every 47 minutes:
 If there are errors running the freshclam process, check if a process is
 blocking the log file, by running the following command:
 
-[source,console]
+[source,bash]
 ----
 lsof /var/log/clamav/freshclam.log
 ----
 
-If you want to refresh the ClamAV database manually, follow these steps:
+If you want to refresh the ClamAV database manually, follow these steps and gently end the freshclam process with this command:
 
-[source,console]
+[source,bash]
 ----
-# Gently end the freshclam process with this command:
 sudo pkill -15 -x freshclam
+----
 
-# Start the refresh process again with this command:
+Start the refresh process again with this command:
+
+[source,bash]
+----
 sudo freshclam
 ----
 
