--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_activity_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_activity_commands.adoc
@@ -2,7 +2,7 @@
 
 The `activity` command is used for sending automated activity email notifications in ownCloud server.
 
-[source,console]
+[source,plaintext]
 ----
  activity
   activity:send-emails  Send all pending activity emails now
