--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_app_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_app_commands.adoc
@@ -2,7 +2,7 @@
 
 The `app` commands list, enable, and disable apps.
 
-[source,console]
+[source,plaintext]
 ----
 app
  app:check-code   check code to be compliant
