--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_database_conversion_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_database_conversion_commands.adoc
@@ -3,7 +3,7 @@
 The SQLite database is good for testing, and for ownCloud servers with small single-user workloads that do not use sync clients, but production servers with multiple users should use MariaDB, MySQL, or PostgreSQL.
 You can use `occ` to convert from SQLite to one of these other databases.
 
-[source,console]
+[source,plaintext]
 ----
 db
  db:convert-type           Convert the ownCloud database to the newly configured one
