--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_dav_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_dav_commands.adoc
@@ -2,7 +2,7 @@
 
 A set of commands to create and sync address books and calendars:
 
-[source,console]
+[source,plaintext]
 ----
 dav
  dav:cleanup-chunks            Cleanup outdated chunks
