--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_file_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_file_commands.adoc
@@ -2,7 +2,7 @@
 
 `occ` has the following commands for managing files in ownCloud.
 
-[source,console]
+[source,plaintext]
 ----
 files
  files:check-cache          Check if the target file exists in the primary storage
