--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_group_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_group_commands.adoc
@@ -6,7 +6,7 @@ Group names are case-sensitive, so "Finance" and "finance" are two different gro
 
 The full list of commands is:
 
-[source,console]
+[source,plaintext]
 ----
 group
  group:add                           Adds a group
