--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_logging_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_logging_commands.adoc
@@ -2,7 +2,7 @@
 
 These commands view and configure your ownCloud logging preferences.
 
-[source,console]
+[source,plaintext]
 ----
 log
  log:manage     Manage logging configuration
