--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_trashbin_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_trashbin_commands.adoc
@@ -3,7 +3,7 @@
 NOTE: These commands are only available when the 'Deleted files' app (`files_trashbin`) is enabled.
 These commands are not available in xref:maintenance-commands[single-user (maintenance) mode].
 
-[source,console]
+[source,plaintext]
 ----
 trashbin
  trashbin:cleanup   Remove deleted files
