--- a/modules/admin_manual/pages/appliance/configuration/certificates.adoc
+++ b/modules/admin_manual/pages/appliance/configuration/certificates.adoc
@@ -9,6 +9,7 @@ to follow these three steps:
 your virtual machine or via ssh connection to your appliance.
 3.  Execute the following commands:
 
+[source,bash]
 ----
 ucr set apache2/ssl/certificate="/etc/myssl/cert.pem"
 ucr set apache2/ssl/key="/etc/myssl/private.key"
@@ -18,7 +19,7 @@ Remember to adjust the path and filename to match your certificate.
 
 Once you’ve completed these steps, restart Apache using the following command:
 
-[source,console]
+[source,bash]
 ----
 sudo service apache2 restart
 ----
@@ -26,7 +27,7 @@ sudo service apache2 restart
 Now your certificates will be used to access your appliance.
 If you want to limit the access to your server exclusively to HTTPS, use this command:
 
-[source,console]
+[source,bash]
 ----
 sudo ucr set apache2/force_https=yes
 ----
