--- a/modules/admin_manual/pages/configuration/server/harden_server.adoc
+++ b/modules/admin_manual/pages/configuration/server/harden_server.adoc
@@ -39,7 +39,7 @@ This information is obtained by running xref:configuration/server/occ_command.ad
 
 It should print a list of all the routes as in the following truncated example.
 
-[source,console]
+[source,plaintext]
 ----
 +-----------------------------------------------------------+-----------------+
 | Path                                                      | Methods         |
