--- a/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_2fa_app_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/app_commands/_2fa_app_commands.adoc
@@ -6,7 +6,7 @@ The following commands manage the _2-Factor Authentication App_. TOTP stands for
 
 The following commands are available for the 2-Factor Authentication app:
 
-[source,console]
+[source,plaintext]
 ----
  twofactor_totp
   twofactor_totp:delete-redundant-secret         Delete the redundant secret of non-existing users
