--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_background_jobs_selector.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_background_jobs_selector.adoc
@@ -3,7 +3,7 @@
 Use the `background` command to select which scheduler you want to use for controlling xref:configuration/server/background_jobs_configuration.adoc[background jobs]. 
 This is the same as using the *Cron* section on your ownCloud Admin page.
 
-[source,console]
+[source,plaintext]
 ----
 background
  background:ajax       Use ajax to run background jobs
