--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_encryption_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_encryption_commands.adoc
@@ -2,7 +2,7 @@
 
 `occ` includes a complete set of commands for managing encryption. When using a HSM (Hardware Security Module, can also be emulated by software), additional occ encryption-related commands can be used.
 
-[source,console]
+[source,plaintext]
 ----
 encryption
  config:app:set encryption encryptHomeStorage Encrypt the users home storage
@@ -28,7 +28,7 @@ encryption
 
 When using a HSM (Hardware Security Module, additional occ encryption-related commands can be used, see the HSM occ documentation below. The occ commands can also be used when HSM is initiated via software emulation like SoftHSM2.
 
-[source,console]
+[source,plaintext]
 ----
 encryption
  encryption:hsmdaemon                Export or Import the Masterkey
